<resources>
    <string name="app_name">Maskerku</string>
    <string name="title_login">Login</string>
    <string name="image_create_your_mask">create your mask</string>
    <string name="image_choose_your_design">choose your design</string>
    <string name="label_most_popular">Most Popular :</string>
    <string name="title_create_your_mask">Create Your Mask</string>
    <string name="image_terpopuler_1">image terpopuler 1</string>
    <string name="image_terpopuler_2">image terpopuler 2</string>
    <string name="image_terpopuler_3">image terpopuler 3</string>
    <string name="image_terpopuler_4">image terpopuler 4</string>
    <string name="image_terpopuler_5">image terpopuler 5</string>
    <string name="label_upload_files">Upload Files</string>
    <string name="image_upload_files">image upload files</string>
    <string name="image_bmkg">image bmkg</string>
    <string name="label_maskerku">MASKERKU</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_choose_your_design">Choose Your Design</string>
    <string name="title_testimoni">Testimoni</string>
    <string name="title_profile">Profile</string>
    <string name="title_profile_data_diri">Profile Data Diri</string>
    <string name="title_profil_alamat">Profil Alamat</string>
    <string name="text_sign_up_underlined"><u>Sign up</u></string>
    <string name="title_register">Register</string>
    <string name="text_sign_in_underlined"><u>Sign in</u></string>
    <string name="title_setting">Setting</string>
    <string name="about_us">About us</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="tab_text_1">Cart</string>
    <string name="tab_text_2">Paid</string>
    <string name="tab_text_3">Shipped</string>
</resources>
